some challenge task features implemented: - buttons - windows for creating an account and signing in - added fields to Account class - other important functionalities

--- a/src/sample/create_account_panel.fxml
+++ b/src/sample/create_account_panel.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -10,15 +9,16 @@
 
 <VBox alignment="CENTER" spacing="15.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Please sign into your AirBnb London account.">
+      <Label text="Please create your AirBnB London account.">
          <padding>
             <Insets bottom="20.0" />
          </padding>
       </Label>
-      <TextField promptText="Email:" />
-      <PasswordField promptText="Password:" />
-      <Button mnemonicParsing="false" text="Sign in" />
-      <Hyperlink text="Don't have an account? Create one." />
+      <TextField fx:id="username" promptText="Username:" />
+      <TextField fx:id="email" promptText="Email:" />
+      <PasswordField fx:id="password" promptText="Password:" />
+      <PasswordField promptText="confirmPassword:" />
+      <Button mnemonicParsing="false" onAction= "#createAccountAction" text="Create the account" />
    </children>
    <padding>
       <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
