--- a/src/sample/MapPanelStyle.css
+++ b/src/sample/MapPanelStyle.css
@@ -13,10 +13,25 @@
 .hyperlink {
     -fx-border-color: transparent;
 }
-.date-select-pane {
-    -fx-border-radius: 10 10 10 10;
-    -fx-background-radius: 10 10 10 10;
+
+.check-in-pane {
+    -fx-border-color: black;
+    -fx-background-insets: 0, 0 1 1 0 ;
+    -fx-border-style: hidden solid solid hidden;
 }
+.check-out-pane {
+    -fx-border-color: black;
+    -fx-background-insets: 0, 0 1 1 0 ;
+    -fx-border-style: hidden hidden solid hidden;
+}
+
+.date-select-pane {
+    -fx-border-radius: 15 15 15 15;
+    -fx-border-insets: 4;
+    -fx-border-width: 2;
+    -fx-border-color: black;
+}
+
 .save-box .box {
     -fx-shape: "M0 200 v-200 h200 a100,100 90 0,1 0,200 a100,100 90 0,1 -200,0 z";
     -fx-rotate: 225;
