--- a/src/sample/AccountPanel.fxml
+++ b/src/sample/AccountPanel.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AccountPanelController">
    <left>
       <VBox fx:id="subPane" maxWidth="150.0" prefHeight="200.0" prefWidth="150.0" spacing="10.0" style="-fx-border-color: black; -fx-background-color: rgb(220,220,220);">
          <children>
@@ -28,7 +27,7 @@
             <VBox alignment="CENTER" spacing="10.0">
                <children>
                   <Button mnemonicParsing="false" text="Account settings" />
-                  <Button mnemonicParsing="false" onAction="#signOutAction" text="Sign out" />
+                  <Button mnemonicParsing="false" text="Account details" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -37,11 +36,4 @@
          </children>
       </VBox>
    </left>
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Circle fill="WHITE" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
-         </children>
-      </VBox>
-   </center>
 </BorderPane>
