--- a/src/sample/MainRefactored.fxml
+++ b/src/sample/MainRefactored.fxml
@@ -42,8 +42,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<StackPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainControllerRefactored">
+<StackPane alignment="TOP_RIGHT" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane fx:id="mainPane">
          <top>
@@ -51,43 +50,51 @@
                <children>
                   <BorderPane>
                      <bottom>
-                        <VBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Label alignment="CENTER" contentDisplay="CENTER" text="Price range:" textAlignment="CENTER">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </Label>
-                              <HBox spacing="10.0">
+                        <BorderPane BorderPane.alignment="CENTER">
+                           <right>
+                              <VBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
                                  <children>
-                                    <Label text="From:" />
-                                    <ComboBox fx:id="minimumPrice" promptText="-" />
-                                    <Label text="To:" />
-                                    <ComboBox fx:id="maximumPrice" promptText="-" />
-                                    <Button fx:id="searchButton" mnemonicParsing="false" onAction="#searchAction" text="Search!" />
+                                    <Label alignment="CENTER" contentDisplay="CENTER" text="Price range:" textAlignment="CENTER">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <padding>
+                                          <Insets left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </Label>
+                                    <HBox alignment="TOP_RIGHT" spacing="10.0">
+                                       <children>
+                                          <Label text="From:" />
+                                          <ComboBox fx:id="minimumPrice" promptText="-" />
+                                          <Label text="To:" />
+                                          <ComboBox fx:id="maximumPrice" promptText="-" />
+                                          <Button fx:id="searchButton" mnemonicParsing="false" onAction="#searchAction" text="Search!" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </HBox>
                                  </children>
                                  <padding>
-                                    <Insets bottom="5.0" right="5.0" top="5.0" />
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </padding>
-                              </HBox>
-                           </children>
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </VBox>
+                              </VBox>
+                           </right>
+                        </BorderPane>
                      </bottom>
                      <top>
-                        <BorderPane fx:id="accountBar" BorderPane.alignment="CENTER" />
+                        <VBox style="-fx-border-color: black;" BorderPane.alignment="CENTER">
+                           <children>
+                              <BorderPane fx:id="accountBar" />
+                           </children>
+                        </VBox>
                      </top>
                   </BorderPane>
                </children>
             </VBox>
          </top>
          <bottom>
-            <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+            <VBox alignment="CENTER" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
                <children>
                   <BorderPane>
                      <left>
@@ -107,6 +114,9 @@
                            </font>
                         </Button>
                      </right>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
                   </BorderPane>
                </children>
             </VBox>
